# study

./: .gitignore  README.md
cli/: README.md
cli/pdf-book/: README.md  pyproject.toml
cli/pdf-book/pdf_book/: __init__.py  cli.py
cli/python-cleo-study/: README.md  pyproject.toml
cli/python-cleo-study/python_cleo_study/: __init__.py  cli.py
cli/python-cleo-study/python_cleo_study/command/: __init__.py  add.py  up.py
cli/rust-clap-study/: README.md
cli/rust-console-app/: Cargo.toml  README.md
data/: README.md
data/8264-ebike-travels/: 8264-v01.py  README.md  run.bat
data/jupyter-study-env/: README.md  pyproject.toml
data/py3-stock/: README.md  pyproject.toml
data/py3-stock/conf/: logger.conf  stock.conf
data/py3-stock/diesel/: .env
data/py3-stock/diesel/migrations/2020-09-16-004025_create_schema/: down.sql  time_data.sql  up.sql
data/py3-stock/jupyter/: 01-基于bakstock获取股票数据demo.ipynb  02-基于tushare获取股票数据demo.ipynb  03-解析通达信离线股票数据demo.ipynb  04-pgsql数据库操作demo.ipynb  05-基于pytdx获取股票数据demo.ipynb  b01-bakstock-demo.ipynb  b02-mootdx-demo.ipynb  b03-pytdx-demo.ipynb  b04-pytdx-demo1.ipynb  b05-psycopg2-demo.ipynb
data/py3-stock/src/fetch_data/: __init__.py  cli.py  main.py
data/py3-stock/src/fetch_data/etl/: __init__.py  basic.py  kdata_day.py  kdata_min.py  transaction_data.py
data/py3-stock/src/fetch_data/etlx/: __init__.py  basic.py  kdata_day.py  kdata_min.py  transaction_data.py
data/py3-stock/src/stock_utils/: __init__.py  crypt.py  dbhelper.py  helper.py  setting.py
data/python-stock_data-akshare/: .env  AKShare_API.md  DEVELOPMENT.md  README.md  pyproject.toml
data/python-stock_data-akshare/migrations/: 20230810012950_init-schema.sql
data/python-stock_data-akshare/notebook/: api-test.ipynb  api-v2-test.ipynb
data/python-stock_data-akshare/src/sd_cli/: cli.py
data/python-stock_data-akshare/src/sd_cli/command/: __init__.py  fetch.py  update.py
data/python-stock_data-akshare/src/sd_core/: __init__.py  api.py  api_v2.py
data/python-stock_data-jisilu/: .env  README.md  pyproject.toml
data/python-stock_data-jisilu/api/: README.md  api.http  etf-1-Response.json  etf-1d-Response.json  etf-2-Response.json  etf-2d-Response.json  etf-3-Response.json  etf-4-Response.json  etf-4d-Response.json  lof-1-Response.json  lof-1d-Response.json  lof-2-Response.json  lof-2d-Response.json
data/python-stock_data-jisilu/migrations/: 20230804133155_init-schema.sql
data/python-stock_data-jisilu/notebook/: fetch-test.ipynb  requests-study.ipynb
data/python-stock_data-jisilu/src/data_fetch/: __init__.py  api.py
data/python-stock_data-jisilu/src/data_process/: __init__.py  cli.py  fetch.py
data/python-stock_data-jisilu/src/data_process/command/: __init__.py  demo.py  fetch.py
db/: README.md
db/postgrest-demo/: Cargo.toml  README.md  demo.conf
db/rust-oracle-oracle/: .env  Cargo.toml  README.md
db/rust-oracle-sibyl/: .env  Cargo.toml  README.md
db/rust-oracle-sibyl/nonblocking/: Cargo.toml  README.md
db/rust-sqlite-sqlx/: .env  Cargo.toml  README.md
db/rust-sqlite-sqlx/src/: main.rs
docker/: README.md  jupyter.yaml  oracle.yaml  pgsql.yaml  portainer.yaml  redis.yaml  swag.yaml
docker/zabbix/: README.md  docker-compose.yaml
elm/: README.md
elm/elm-packages/: elm.json
elm/elm-vite-template/: README.md  index.html  package.json
elm/elm-watch-template/: README.md  elm-watch.json  package.json  postprocess.js  run-pty.json
exercises/: README.md
exercises/elm/: README.md
exercises/tauri/: README.md
gui/: README.md
gui/portal-news-gui/: README.md  elm.json  index.html  package.json  vite.config.js
gui/portal-news-gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/portal-news-gui/src-tauri/.cargo/: config.toml
gui/portal-news-gui/src-tauri/crates/seeker/: Cargo.toml  conf.toml
gui/portal-news-gui/src-tauri/crates/seeker/src/: conf.rs  lib.rs  portal.rs
gui/portal-news-gui/src-tauri/crates/seeker/ureq/: Cargo.toml  README.md
gui/portal-news-gui/src-tauri/crates/seeker/ureq/src/: response.rs
gui/portal-news-gui/src-tauri/src/: main.rs
gui/rust-gui-tauri-elm/: README.md
gui/rust-gui-tauri-vite/: README.md
notes/: README.md
notes/my-knowledge-graph/: README.md  book.toml  gen_summary.py
notes/如何搭建开发环境/: -=索引=-.md  Oracle客户端配置.md  install-debian_12.md  install-openSUSE-Leap.md  install-vm-freebsd-14.2.md  install-vm-ubuntu-22.04-lts.md  install-wsl-debian_12.md  install-wsl-opensuse-leap-15.6.md  install-wsl-opensuse-tumbleweed_for_c.md  install-wsl-opensuse-tumbleweed_for_esp.md  install-wsl-ubuntu-22.04-lts.md  install-wsl-ubuntu-22.04-lts_for_esp.md  install-wsl-ubuntu-22.04-lts_lite.md  install-wsl-ubuntu_for_dev.md  内网搭建简易pypi服务.md  双机系统的Linux开发环境.md  基于Docker Desktop提供服务组件.md  基于scoop搭建Windows开发环境.md  基于wsl2搭建Linux开发环境.md  将外网机的开发环境移植到内网.md  无显示器安装配置-Raspberry_Pi_5.md
notes/网上技术文摘/: Alpine on WSL2 学习笔记.md  baostock-api.md  docker-compose.yml 配置文件全面指南.md  超详细的 Vagrant 上手指南.md  (+1 more)
projects/: README.md
web/: README.md
web/im-platform/backend/json-rpc/: Cargo.toml  README.md
web/im-platform/backend/json-rpc/examples/: demo.rs
web/im-platform/backend/json-rpc/src/: error.rs  filters.rs  lib.rs  rejections.rs  request.rs  request_handlers.rs  response.rs
web/im-platform/backend/json-rpc/src/filters/: tests.rs
web/im-platform/backend/json-rpc/src/filters/tests/: base_filter_with_recovery_tests.rs  main_filter_with_recovery_tests.rs
web/im-platform/backend/json-rpc/src/request/: params.rs
web/im-platform/backend/server/: Cargo.toml
web/im-platform/backend/server/migrations/: 20230715000000_initial-schema.sql
web/im-platform/backend/server/src/: handlers.rs  macros.rs  main.rs
web/im-platform/backend/server/src/gateway/: chat.rs  handler.rs  mod.rs
web/im-platform/backend/server/src/handlers/: auth.rs  guilds.rs  users.rs  utils.rs
web/im-platform/backend/server/src/models/: appstate.rs  auth.rs  db.rs  gateway_event.rs  guild.rs  member.rs  message.rs  mod.rs  rpc.rs  snowflake.rs  user.rs
web/rust-jsonrpc-warp/: Cargo.toml  README.md  test.http
web/rust-jsonrpc-warp/src/: main.rs
(+180 files in other folders)
