[tool.poetry]
name = "jupyter-study-env"
version = "0.1.0"
description = ""
authors = ["liwenjun <liwenjun@21cn.com>"]
readme = "README.md"
packages = [{include = "jupyter_study_env"}]

[tool.poetry.dependencies]
python = "^3.11"
akshare = "^1.10.79"
dulwich = "^0.21.5"
pandas = "^2.0.3"
matplotlib = "^3.7.2"
requests = "^2.31.0"
streamlit = "^1.26.0"


[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
priority = "default"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
jupyterlab = "^4.0.3"
jupyterlab-language-pack-zh-cn = "^4.0.post1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
