[package]
name = "rust-sqlite-sqlx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
dotenvy = "0.15.7"
sqlx = { version = "0.7.1", features = ["sqlite", "runtime-tokio-native-tls"] }
tokio = { version = "1.29.1", features = ["rt", "macros"] }
