[package]
name = "rust-jsonrpc-warp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
casper-json-rpc = "1.0.0"
serde = "1.0.179"
serde_json = "1.0.104"
tokio = { version = "1.29.1", features = ["rt-multi-thread", "macros"] }
warp = "0.3.5"
