[package]
name = "nonblocking"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
sibyl = { version = "0.6.16", features = ["nonblocking", "tokio"] }
tokio = { version = "1.29.1", features = ["full"] }
