[package]
name = "webseeker"
version = "0.1.0"
description = "门户新闻检索App"
authors = ["liwenjun"]
license = "MIT"
repository = ""
default-run = "webseeker"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.3", features = [] }
clap = { version = "4", features = ["derive"] }
magic_static = "3"
toml = "0.7"
seeker = { path = "crates/seeker" }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

# default to small, optimized release binaries
[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"

# 优化开发环境
[profile.dev]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"
