[package]
name = "server"
version = "1.0.0"
edition = "2021"
authors = ["liwenjun"]
description = "A library suitable for use as the framework for a JSON-RPC server."
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.29.1", features = ["full", "parking_lot", "tracing"] }
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.7", features = ["macros", "migrate", "sqlx-macros", "postgres", "runtime-tokio-rustls"] }
serde_json = "1"
warp = "0.3.5"
futures-util = "0.3.28"
anyhow = "1"
tokio-stream = "0.1.14"
lazy_static = "1.4.0"
jsonwebtoken = "8"
chrono = { version = "0.4.26", default-features = false, features = ["alloc", "std", "clock"] }
rs-snowflake = "0.6.0"
dotenv = "0.15.0"
async-trait = "0.1.71"
secrecy = { version = "0.8.0", features = ["serde"] }
argon2 = { version = "0.5.1", features= ["std"] }
rand = "0.8.5"
regex = "1.9.1"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
derive_builder = "0.12.0"
futures = "0.3.28"
jsonrpc = { version = "1", path = "../json-rpc" }
